Package: aroma.core
===================

Version: 2.5.1 [2012-04-16]
o Package no longer "Suggests" affxparser.  It was needed because of
  the findFiles() function, which has been added to R.utils v1.13.1.


Version: 2.5.0 [2012-03-25]
o Submitted to CRAN.
o The package passes all redundancy tests.


Version: 2.4.13 [2012-03-23]
o Added alpha versions of PairedPSCNData and NonPairedPSCNData,
  which inherits from RawGenomicSignals.
o Turned weightedMad() into a default method, added help documentation
  with example code.
o CLEANUP: Moved (internal) swapXY() and draw() for 'density'
  objects to R.utils (>= 1.10.0).
o BUG FIX: "["() for RichDataFrame would loose the class attribute,
  unless argument 'drop' was FALSE.


Version: 2.4.12 [2012-03-15]
o Now colBinnedSmoothing(), colKernelSmoothing() and
  colGaussianSmoothing() returns a matrix with column names
  as in argument 'Y'.
o For RawGenomicSignals, added argument 'fields' to binnedSmoothing()
  and binnedSmoothingByField().  Also added argument 'field' to
  getSignals() and estimateStandardDeviation().
o Now RawGenomicSignals extends new internal RichDataFrame class.
o CLEANUP: Dropped deprecated files from the reports/includes/js/
  directory installed by ArrayExplorer and ChromosomeExplorer.


Version: 2.4.11 [2012-03-12]
o Added binnedSmoothingByField() for RawGenomicSignals.
o Added subset() for RawGenomicSignals.
o Added get- and setVirtualField() for RawGenomicSignals.
o Added argument 'sort' to as.data.frame() for RawGenomicSignals.


Version: 2.4.10 [2012-03-06]
o GENERALIZATION: The new ArrayExplorer v3.4 will work with most
  commonly used web browsers including Mozilla Firefox, Google Chrome,
  Microsoft Internet Explorer, Apple Safari, and Opera.


Version: 2.4.9 [2012-03-06]
o ROBUSTNESS: Now all writeDataFrame() methods will add quotation
  marks around column names that contain a comment character ('#').
  This will make the written file readable with read.table() even 