@@ -6,13 +6,12 @@ Author: Henrik Bengtsson <henrikb@braju.com>
 Maintainer: Henrik Bengtsson <henrikb@braju.com>
 Depends: R (>= 2.12.0), R.methodsS3 (>= 1.2.2), R.oo (>= 1.9.3),
         R.utils (>= 1.12.1), R.cache (>= 0.6.2), R.filesets (>= 1.1.5),
-        R.rsp (>= 0.7.5), matrixStats (>= 0.4.4), digest (>= 0.5.2),
-        aroma.light (>= 1.22.0)
+        R.rsp (>= 0.7.5), matrixStats (>= 0.5.0), digest (>= 0.5.2)
 Imports: R.methodsS3 (>= 1.2.2), R.oo (>= 1.9.3), RColorBrewer (>= 1.0-5)
 Suggests: RColorBrewer (>= 1.0-5), png (>= 0.1-3), EBImage (>= 3.9.7),
         Cairo (>= 1.4-0), sfit (>= 0.1.8), expectile (>= 0.2.5), 
         GLAD (>= 1.12.0), DNAcopy (>= 1.24.0), HaarSeg (>= 0.0.2),
-        mpcbs (>= 1.1.1), PSCBS (>= 0.23.0)
+        mpcbs (>= 1.1.1), aroma.light (>= 1.22.0), PSCBS (>= 0.23.0)
 Description: This package contains core methods and classes used by
         higher-level aroma.* packages part of the Aroma Project, e.g.
         aroma.affymetrix and aroma.cn.  Its API should be considered to
